Changing class->record for dto and model